add the get tweet comment api and swag doc
